tests/miniJava/pos/000679_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { if ( java ) java [ 0 ] = 0 ; else System.out.println ( { } ) ; } }
