tests/miniJava/neg/000750_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { java = extends 0 && 0 ; } }
